--- a/i-font-preview.html
+++ b/i-font-preview.html
@@ -155,8 +155,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>i-font contains 188 glyphs:</h1>
-        <a onclick="toggleCharacters(); return false;" href="#">Toggle Preview Characters</a>
+        <h1>font library  contains <%Object.keys(fontName).length%> glyphs:</h1>
       </header>
       <%for(let item of Object.keys(fontName)){%>
       <div class="glyph">
@@ -220,9 +219,6 @@
         </div>
       </div>
       <%}%>
-      <footer>
-        Made with love using <a href="http://fontcustom.com">Font Custom</a>.
-      </footer>
     </div>
   </body>
 </html>
