增加字体数目显示

--- a/demo/src/iconfont/icon-preview.html
+++ b/demo/src/iconfont/icon-preview.html
@@ -230,7 +230,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>font library  contains  glyphs:</h1>
+        <h1>font library  contains  glyphs (14):</h1>
       </header>
       
       <div class="glyph">
