增加预览数目

--- a/i-font-preview.html
+++ b/i-font-preview.html
@@ -155,7 +155,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>font library  contains <%Object.keys(fontName).length%> glyphs:</h1>
+        <h1>font library  contains <%Object.keys(fontName).length%> glyphs (<%=Object.keys(fontName).length%>):</h1>
       </header>
       <%for(let item of Object.keys(fontName)){%>
       <div class="glyph">
